--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,6 +14,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Buy List Guardian</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow Buy List Guardian to access your photos to store codes for easy scanning.</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
